migrate features for scandium-sr2
adapted code for odl scandium-sr2

Issue-ID: CCSDK-4126
Change-Id: Ib1379c849e1fdb776efce643e9bc13a857b7f131
Signed-off-by: Michael Dürre <michael.duerre@highstreet-technologies.com>
Signed-off-by: Herbert Eiselt <herbert.eiselt@highstreet-technologies.com>